manifests/base/resources/policy-decisions/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "5080"
    prometheus.io/scrape: "true"
  labels:
    app: policy-decisions
    chart: policy-decisions-1.9.19
    heritage: Helm
    release: policy-decisions
  name: policy-decisions
spec:
  ports:
  - name: policy-decisions
    port: 5080
    protocol: TCP
    targetPort: 5080
  selector:
    app: policy-decisions
    release: policy-decisions
  type: ClusterIP
---
